# lacrei-saude-backend

./: README.md
lacrei-saude-backend/: pyproject.toml  sql_app.db
lacrei-saude-backend/lacrei_saude_backend/: crud.py  database.py  main.py  models.py  schemas.py  security.py
lacrei-saude-backend/tests/: sql_app.db  test_api.py
